# Programming-Push-Back

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.backup  Programming-High-Stakes.code-workspace  README.md  compilation instructions.txt  test.txt  toolchain-arm-none-eabi.cmake
.github/workflows/: Build.yml  PR Branch Enforcer.yml  main.yml
.run/: Build & Upload Do.run.xml  Build & Upload Think.run.xml  Build Do.run.xml  Build Project CLI.run.xml  Build Think.run.xml  Clean.run.xml  Run.run.xml  Stop.run.xml  Terminal.run.xml  Upload.run.xml
High Stakes/: project.pros
High Stakes/include/: Constants.hpp  ports.hpp
High Stakes/src/: Subsystem.cpp
High_Stakes/: project.pros
High_Stakes/include/pros/: motors.hpp
High_Stakes/src/: AbstractSubsystem.hpp  AutonomousControlScheduler.cpp  AutonomousControlScheduler.hpp  AutonomousControlSchedulerDo.cpp  AutonomousControlSchedulerDo.hpp  AutonomousControlSchedulerThink.cpp  AutonomousControlSchedulerThink.hpp  ButtonMappings.cpp  ButtonMappings.hpp  Command.cpp  Command.hpp  Config.hpp  Constants.hpp  DriverControlScheduler.cpp  DriverControlScheduler.hpp  Pose.cpp  Pose.hpp  Subsystem.cpp  Subsystem.hpp  Timer.cpp  Timer.hpp  asset.hpp  config.hpp  examplePath_txt  main.cpp  ports.hpp
High_Stakes/src/commands/: DriveStraight.cpp  DriveStraight.hpp  LadyBrownDown.hpp  LadyBrownUp.cpp  LadyBrownUp.hpp  PPIntake.cpp  PPIntake.hpp  PPIntakeLift.cpp  PPIntakeLift.hpp  PurePursuit.cpp  PurePursuit.hpp  StartClamping.cpp  StartClamping.hpp  StartIntaking.cpp  StartIntaking.hpp  StartIntakingIn.cpp  StartIntakingIn.hpp  StartIntakingOut.cpp  StartIntakingOut.hpp  StartLiftingDown.cpp  StartLiftingDown.hpp  StartLiftingUp.cpp  StartLiftingUp.hpp  StopIntaking.cpp  StopIntaking.hpp  StopLifting.cpp  StopLifting.hpp  Turn.cpp
High_Stakes/src/commands/Default/: DriveStraightIntakeLift.cpp  DumbDriveStraight.hpp  IntakeLiftTime.hpp  MoveLiftDegrees.cpp  MoveLiftDegrees.hpp  ResetLift.cpp  ResetLift.hpp  TurnAround.cpp  TurnAround.hpp  TurnDegrees.hpp  TurnToHeading.cpp  TurnToHeading.hpp  TurnToPoint.cpp  TurnToPoint.hpp
High_Stakes/src/commands/Instant/: LadyBrownDown.cpp  LadyBrownDown.hpp  LadyBrownUp.hpp  NextLadyBrownPosition.cpp  NextLadyBrownPosition.hpp  SetReversed.hpp  StartClamping.cpp  StartClamping.hpp  StartIntakingIn.cpp  (+16 more)
High_Stakes/src/math/: Odometry.cpp  Odometry.hpp  PID.cpp  PID.hpp  Utils.hpp
High_Stakes/src/subystems/: Arm.cpp  Arm.hpp  Clamp.cpp  Clamp.hpp  DriverControl.hpp  Drivetrain.cpp  Drivetrain.hpp  HookSensor.cpp  HookSensor.hpp  Intake.cpp  Intake.hpp  LadyBrown.cpp  LadyBrown.hpp  Lift.cpp  Lift.hpp
High_Stakes/static/: alignForGoal.txt  back72.txt  backUpQuick.txt  backUpQuickReverse.txt  curve1.txt  doinkTopRingDo.txt  example.txt  getFirstRing.txt  getFirstRingThink.txt  getGoal.txt  getGoalSimpleDo.txt  getGoalThink.txt  intake1.txt  intake1Do.txt  intake2Do.txt  intake2SimpleDo.txt  intakeCorner.txt  loop1.txt  loop2.txt  pathPart0.txt  pathPart1.txt  pathPart2.txt  pathPart3.txt  pathPart4.txt  rushCenterFromLeft.txt  straight72.txt  touchPost.txt  touchPostThink.txt  touchStakeSimpleDo.txt
Push_Back/: CMakeLists.txt  Makefile  common.mk  project.pros
Push_Back/dependencies/: CMakeLists.txt
Push_Back/include/pros/: motor_group.hpp
Push_Back/src/: AbstractMotorSubsystem.cpp  AbstractMotorSubsystem.hpp  AbstractSubsystem.cpp  AutonomousControlScheduler.cpp  AutonomousControlScheduler.hpp  ButtonMappings.cpp  ButtonMappings.hpp  Command.cpp  Command.hpp  Config.hpp  Constants.hpp  DriverControlScheduler.cpp  DriverControlScheduler.hpp  PathPose.cpp  PathPose.hpp  Pose.cpp  SerialHandlerBrain.hpp  main.cpp  ports.hpp
Push_Back/src/architecture/: AutonomousControlScheduler.cpp  AutonomousControlScheduler.hpp  Command.cpp  Command.hpp  DriverControlScheduler.cpp  DriverControlScheduler.hpp  asset.hpp
Push_Back/src/architecture/commands/: ChainCommand.cpp  ChainCommand.hpp  Command.cpp  Command.hpp  InstantCommand.cpp  InstantCommand.hpp  ParallelCommand.cpp  ParallelCommand.hpp  ProgressCommand.cpp  ProgressCommand.hpp
Push_Back/src/commands/: DriveStraight.cpp  DriveStraight.hpp  DriveStraightProgress.cpp  DriveStraightProgress.hpp  PPIntake.cpp  PPIntake.hpp  PPIntakeLift.hpp  PurePursuit.cpp  PurePursuit.hpp  Turn.cpp  Turn.hpp
Push_Back/src/commands/Default/: DriveStraightIntakeLift.cpp  DriveStraightIntakeLift.hpp  DumbDriveStraight.cpp  DumbDriveStraight.hpp  IntakeLiftTime.cpp  IntakeTime.cpp  IntakeTime.hpp  LadyBrownLoadingLiftReverse.cpp  LadyBrownLoadingLiftReverse.hpp  LiftTime.cpp  LiftTime.hpp  MoveLadyBrownPosition.cpp  MoveLadyBrownPosition.hpp  MoveLiftDegrees.cpp  MoveLiftDegrees.hpp  ResetLift.hpp  TurnAround.cpp  TurnAround.hpp  TurnDegrees.cpp  TurnToHeading.hpp
Push_Back/src/commands/Instant/: NextLadyBrownPosition.cpp  SetPose.cpp  SetPose.hpp  SetReversed.cpp  SetReversed.hpp  StartIntakingIn.cpp  StartIntakingOut.cpp  StartLiftingDown.cpp  StartLiftingUp.cpp  StartLiftingUp.hpp  StopIntaking.cpp  StopLifting.cpp  ToggleArm.cpp  ToggleClamp.cpp
Push_Back/src/commands/default/: DriveStraight.cpp  DriveStraight.hpp  PurePursuit.cpp  PurePursuit.hpp  Turn.cpp  Turn.hpp
Push_Back/src/commands/instant/: SetPose.cpp  SetPose.hpp  SetReversed.cpp  SetReversed.hpp
Push_Back/src/math/: PID.cpp  PID.hpp  Timer.cpp  Utils.hpp
Push_Back/src/math/odometry/: AbstractOdometry.cpp  AbstractOdometry.hpp  OdometryArc.cpp  OdometryArc.hpp  OdometryGyro.cpp  OdometryGyro.hpp
Push_Back/src/subsystems/: Drivetrain.cpp  Drivetrain.hpp  SerialHandlerSubsystem.cpp  SerialHandlerSubsystem.hpp
Push_Back/src/subystems/: Clamp.cpp  Clamp.hpp  Lift.cpp  Lift.hpp
Push_Back/src/test/: CMakeLists.txt  gtest.cc
Push_Back/static/: getGoal.txt  getGoal2.txt  getGoalDo.txt  intake1SimpleDo.txt  intake3SimpleDo.txt
Push_Back/test/: CMakeLists.txt
Push_Back/test/src/architecture/commands/: ChainCommandTest.cc  CommandTest.cc  InstantCommandTest.cc  ParallelCommandTest.cc
Push_Back/test/src/architecture/commands/helpers/: IdCommand.cc  LogCommand.cc
(+5 files in other folders)
